# gpu-raytracer

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
docs/: bake-volume-notes.md  current-renderer-walkthrough.md  hybrid-rendering-notes.md  lightmap-baking-notes.md  packing-notes.md  roadmap.md
shaders/: present.comp  raytrace.comp
src/: app.cpp  app.h  bvh_builder.cpp  bvh_builder.h  camera.cpp  camera.h  gpu_types.h  loading_screen.cpp  loading_screen.h  main.cpp  math_types.h  mesh_loader.cpp  mesh_loader.h  sample_scene.cpp  sample_scene.h  scene_data.h  stb_easy_font.h  texture_loader.cpp  texture_loader.h  vulkan_helpers.cpp  vulkan_helpers.h  vulkan_renderer.cpp  vulkan_renderer.h
